crates/search/tests/index/snapshots/integration__index__fields__fields_after_uploading_recipe_and_settings-3.snap
---
source: crates/indexsearch/tests/index/fields.rs
expression: "(code.as_u16(), &task)"
---
[
  202,
  {
    "taskUid": "[uid]",
    "indexUid": "[uid]",
    "status": "enqueued",
    "type": "settingsUpdate",
    "enqueuedAt": "[date]"
  }
]
