crates/search/tests/index/snapshots/integration__index__fields__fields_after_uploading_recipe_and_settings-4.snap
---
source: crates/indexsearch/tests/index/fields.rs
expression: "(code.as_u16(), resp)"
---
[
  200,
  {
    "limit": 500,
    "offset": 0,
    "results": [
      {
        "name": "calories_per_serving",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "cooking_time_minutes",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": true,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": true,
          "comparison": true
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "created_at",
        "displayed": {
          "enabled": false
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "cuisine",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "cuisine.is_authentic",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "cuisine.region",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "cuisine.type",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "description",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "difficulty",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "id",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "image_url",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "ingredients",
        "displayed": {
          "enabled": false
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "ingredients.name",
        "displayed": {
          "enabled": false
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "instructions",
        "displayed": {
          "enabled": false
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "instructions.description",
        "displayed": {
          "enabled": false
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "instructions.step",
        "displayed": {
          "enabled": false
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "is_dairy_free",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "is_gluten_free",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "is_vegan",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "is_vegetarian",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "nutrition",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "nutrition.calories",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": true,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": true,
          "comparison": true
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "nutrition.carbs",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": true,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": true,
          "comparison": true
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "nutrition.fat",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": true,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": true,
          "comparison": true
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "nutrition.protein",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": true,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": true,
          "comparison": true
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "preparation_time_minutes",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": true,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": true,
          "comparison": true
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "servings",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "tags",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "title",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "total_time_minutes",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": true
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": true,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": true,
          "comparison": true
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "updated_at",
        "displayed": {
          "enabled": false
        },
        "searchable": {
          "enabled": false
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      }
    ],
    "total": 31
  }
]
