crates/search/tests/index/snapshots/integration__index__fields__get_fields_empty_index-2.snap
---
source: crates/indexsearch/tests/index/fields.rs
expression: "(code.as_u16(), response)"
---
[
  200,
  {
    "results": [],
    "offset": 0,
    "limit": 20,
    "total": 0
  }
]
