crates/search/tests/index/snapshots/integration__index__fields__get_fields_with_documents_and_filters-2.snap
---
source: crates/indexsearch/tests/index/fields.rs
expression: "(code.as_u16(), response)"
---
[
  200,
  {
    "limit": 20,
    "offset": 0,
    "results": [
      {
        "name": "color",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "genre",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "id",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      },
      {
        "name": "title",
        "displayed": {
          "enabled": true
        },
        "searchable": {
          "enabled": true
        },
        "sortable": {
          "enabled": false
        },
        "distinct": {
          "enabled": false
        },
        "rankingRule": {
          "enabled": false
        },
        "filterable": {
          "enabled": false,
          "sortBy": "alpha",
          "facetSearch": false,
          "equality": false,
          "comparison": false
        },
        "localized": {
          "locales": []
        }
      }
    ],
    "total": 4
  }
]
