crates/search/tests/index/snapshots/integration__index__fields__get_fields_with_documents_and_filters-4.snap
---
source: crates/indexsearch/tests/index/fields.rs
expression: "(code.as_u16(), response)"
---
[
  200,
  {
    "limit": 20,
    "offset": 0,
    "results": [],
    "total": 0
  }
]
